2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add rest-api-port

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Typo

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Add a --[no]taped argument
	* man/xml-source/amstatus.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): fix for max_dle_by_volume

2018-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/ambackup.pl: Fix usage message

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm, server-src/amstatus.pl: Fix when taper crash

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): fix for max_dle_by_volume

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm: Undo, bsd_glob is not exported on older
	  perl

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsdtcp-security.c,
	  common-src/conffile.c,
	  common-src/ssl-security.c,
	  oldrecover-src/extract_list.c,
	  server-src/dumper.c: Fix warning in newer gcc
	* perl/Amanda/Rest/Runs.pm,: Fix warning in newer perl
	* installcheck/Installcheck.pm: Use File::Glob::bsd_glob

2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse subsection name with or without double
	  quote
	* installcheck/Amanda_Config.pl: Test it
	* installcheck/Installcheck/Config.pm: set interactivity after they
	  are defined

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm (process_alive): Can be called a class method
	* perl/Amanda/Util.swg (is_pid_alive): New pname argument, call
	  Amanda::Process::process_alive if pname is set
	* perl/Amanda/Status.pm: Call is_pid_alive with 'driver' as the pname
